--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -19,7 +19,17 @@ spring:
       enabled: true
   main.allow-bean-definition-overriding: true
 
-server.port: 8094
+server:
+  port: 8094
+
+springdoc:
+  api-docs:
+    path: /api-docs
+    groups.enabled: true
+  swagger-ui:
+    enabled: true
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
 
 logging.level:
   root: DEBUG
