--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,14 @@
     "@mui/material": "^6.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
     "@eslint/js": "^9.19.0",
+    "@storybook/addon-docs": "^8.6.0",
     "@storybook/addon-essentials": "^8.6.0",
     "@storybook/addon-interactions": "^8.6.0",
     "@storybook/addon-onboarding": "^8.6.0",
