--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^6.4.5",
     "@mui/x-date-pickers": "^7.27.1",
     "@portone/browser-sdk": "^0.0.13",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
