--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -27,35 +27,45 @@ spring:
       enabled: true
   main.allow-bean-definition-overriding: true
   security:
-    oauth2.client:
-      registration:
-        google:
-          scope: openid, profile, email
-          redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-        kakao:
-          scope: profile_nickname, profile_image
-          redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-          authorization-grant-type: authorization_code
-          client-authentication-method: client_secret_post
-        github:
-          scope: user:email
-          redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
-      provider:
-        google:
-          authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
-          token-uri: https://www.googleapis.com/oauth2/v4/token
-          user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
-          user-name-attribute: sub
-        kakao:
-          authorization-uri: https://kauth.kakao.com/oauth/authorize
-          token-uri: https://kauth.kakao.com/oauth/token
-          user-info-uri: https://kapi.kakao.com/v2/user/me
-          user-name-attribute: id
-        github:
-          authorization-uri: https://github.com/login/oauth/authorize
-          token-uri: https://github.com/login/oauth/access_token
-          user-info-uri: https://api.github.com/user
-          user-name-attribute: id
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://accounts.google.com
+          jwk-set-uri: https://www.googleapis.com/oauth2/v3/certs
+      client:
+        registration:
+          google:
+            scope: openid, profile, email
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+          kakao:
+            scope: profile_nickname, profile_image
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            authorization-grant-type: authorization_code
+            client-authentication-method: client_secret_post
+          github:
+            scope: read:user
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+        provider:
+          google:
+            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
+            token-uri: https://www.googleapis.com/oauth2/v4/token
+            user-info-uri: https://www.googleapis.com/oauth2/v3/userinfo
+            user-name-attribute: sub
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          github:
+            authorization-uri: https://github.com/login/oauth/authorize
+            token-uri: https://github.com/login/oauth/access_token
+            user-info-uri: https://api.github.com/user
+            user-name-attribute: id
+
+oauth2:
+  google.client-id: 258128970331-b27sucjs4damtokr699gbl3k1m6ca85s.apps.googleusercontent.com
+  kakao.client-id: 40238f34fbc22b3068fce125cae3aad3
+  github.client-id: Ov23ctXu2evZUSK3lHVV
 
 server:
   port: 8094
