--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
 VITE_API_ROOT=http://localhost:8094/api
+VITE_IMAGE_RESOURCE_ROOT=http://http://garam9koo.dothome.co.kr/vintage-focus/image
 
 VITE_GOOGLE_CLIENT_ID=258128970331-b27sucjs4damtokr699gbl3k1m6ca85s.apps.googleusercontent.com
 VITE_KAKAO_CLIENT_ID=40238f34fbc22b3068fce125cae3aad3
