--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
-VITE_API_ROOT=http://localhost:8094/api
+VITE_API_ROOT=http://13.209.210.176:8094/api
+VITE_FRONT_ROOT=
 VITE_IMAGE_RESOURCE_ROOT=http://garam9koo.dothome.co.kr/vintage-focus/image
 
 VITE_GOOGLE_CLIENT_ID=258128970331-b27sucjs4damtokr699gbl3k1m6ca85s.apps.googleusercontent.com
