--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-VITE_API_ROOT=http://13.209.210.176:8094/api
-VITE_FRONT_ROOT=
+VITE_API_ROOT=http://localhost:8094/api
+VITE_FRONT_ROOT=https://staging.d36nt6r1jah8p6.amplifyapp.com/
 VITE_IMAGE_RESOURCE_ROOT=http://garam9koo.dothome.co.kr/vintage-focus/image
 
 VITE_GOOGLE_CLIENT_ID=258128970331-b27sucjs4damtokr699gbl3k1m6ca85s.apps.googleusercontent.com
