--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_API_ROOT=http://localhost:8094/api
+VITE_API_ROOT=http://13.209.210.176:8094/api
 VITE_FRONT_ROOT=https://staging.d36nt6r1jah8p6.amplifyapp.com/
 VITE_IMAGE_RESOURCE_ROOT=http://garam9koo.dothome.co.kr/vintage-focus/image
 
