--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "@mui/x-date-pickers": "^7.27.1",
     "@portone/browser-sdk": "^0.0.13",
     "@react-google-maps/api": "^2.20.6",
+    "@types/crypto-js": "^4.2.2",
     "axios": "^1.8.1",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
