--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,9 +11,15 @@ WORKDIR /app
 ARG JWT_SECRET_KEY
 ARG PORTONE_API_KEY
 ARG PORTONE_API_SECRET
-ARG OAUTH_PROVIDERS
 ARG SPRING_R2DBC_URL
 ARG SPRING_R2DBC_PASSWORD
+ARG OAUTH_PROVIDERS
+ARG GOOGLE_CLIENT_ID
+ARG GOOGLE_CLIENT_SECRET
+ARG KAKAO_CLIENT_ID
+ARG KAKAO_CLIENT_SECRET
+ARG GH_CLIENT_ID
+ARG GH_CLIENT_SECRET
 
 ENV JWT_SECRET_KEY=${JWT_SECRET_KEY}
 ENV PORTONE_API_KEY=${PORTONE_API_KEY}
@@ -21,6 +27,12 @@ ENV PORTONE_API_SECRET=${PORTONE_API_SECRET}
 ENV OAUTH_PROVIDERS=${OAUTH_PROVIDERS}
 ENV SPRING_R2DBC_URL=${SPRING_R2DBC_URL}
 ENV SPRING_R2DBC_PASSWORD=${SPRING_R2DBC_PASSWORD}
+ENV GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+ENV GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+ENV KAKAO_CLIENT_ID=${KAKAO_CLIENT_ID}
+ENV KAKAO_CLIENT_SECRET=${KAKAO_CLIENT_SECRET}
+ENV GH_CLIENT_ID=${GH_CLIENT_ID}
+ENV GH_CLIENT_SECRET=${GH_CLIENT_SECRET}
 
 COPY --from=builder /build/build/libs/*-SNAPSHOT.jar ./app.jar
 EXPOSE 8094
