--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -16,5 +16,14 @@ portone:
   api-secret: ${PORTONE_API_SECRET}
 
 oauth2:
+  google:
+    client-id: ${GOOGLE_CLIENT_ID}
+    client-secret: ${GOOGLE_CLIENT_SECRET}
+  kakao:
+    client-id: ${KAKAO_CLIENT_ID}
+    client-secret: ${KAKAO_CLIENT_SECRET}
+  github:
+    client-id: ${GH_CLIENT_ID}
+    client-secret: ${GH_CLIENT_SECRET}
   redirect-uri: http://vintage-focus.s3-website.ap-northeast-2.amazonaws.com/callback
 #  redirect-uri: http://localhost:3000/callback
