access token domain changed

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -57,3 +57,5 @@ springdoc:
     enabled: true
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
+
+client-uri: localhost:3000
