--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -27,3 +27,5 @@ oauth2:
     client-secret: ${GH_CLIENT_SECRET}
   redirect-uri: http://vintage-focus.s3-website.ap-northeast-2.amazonaws.com/callback
 #  redirect-uri: http://localhost:3000/callback
+
+client-uri: vintage-focus.s3-website.ap-northeast-2.amazonaws.com
