google map, rental page

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,4 @@
 VITE_API_ROOT=http://localhost:8094/api
 VITE_FRONT_ROOT=http://localhost:3000
+
+VITE_GOOGLE_API_KEY=AIzaSyAHxqSPZaHhmnKKbGq2ENy9mADZqmbCgkk
