--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,4 @@
 VITE_API_ROOT=http://13.209.210.176:8094/api
 VITE_FRONT_ROOT=http://vintage-focus.s3-website.ap-northeast-2.amazonaws.com
+
+VITE_GOOGLE_API_KEY=AIzaSyAaM_BQDPToHf2vmnK2Z4yciB1Wip_HAf4
