--- a/.github/workflows/bluegreen.yml
+++ b/.github/workflows/bluegreen.yml
@@ -37,3 +37,42 @@ jobs:
           --build-arg SPRING_R2DBC_PASSWORD="${{ secrets.SPRING_R2DBC_PASSWORD }}" \
           -t ${{ secrets.DOCKERHUB_USERNAME }}/vintage-focus:latest ./backend
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/vintage-focus:latest
+  deploy:
+    name: Deploy to EC2 with Blue-Green
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Deploy to EC2 via SSH
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USERNAME }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+        port: 22
+        script: |
+          sudo -E bash -c '
+            CURRENT_CONTAINER=$(docker ps --filter "name=blue" --filter "status=running" -q)
+            if [ -n "$CURRENT_CONTAINER" ]; then
+              ACTIVE="blue"
+              STANDBY="green"
+            else
+              ACTIVE="green"
+              STANDBY="blue"
+            fi
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/vintage-focus:latest
+            docker stop $STANDBY || true
+            docker rm $STANDBY || true
+            docker run -d --name $STANDBY --network vintage-focus-network ${{ secrets.DOCKERHUB_USERNAME }}/vintage-focus:latest
+
+            cp ./conf.d/default.conf ./conf.d/default.conf.tmp
+            sed "s/proxy_pass http:\/\/$ACTIVE:8094/proxy_pass http:\/\/$STANDBY:8094/" ./conf.d/default.conf.tmp > ./conf.d/default.conf.tmp2
+            mv ./conf.d/default.conf.tmp2 ./conf.d/default.conf
+            rm ./conf.d/default.conf.tmp
+
+            docker exec nginxcontainer nginx -t || { echo "Nginx config test failed. Aborting."; docker stop $STANDBY; exit 1; }
+            docker exec nginxcontainer nginx -s reload
+
+            # Cleanup old container
+            docker stop $ACTIVE
+            echo "Deployment complete. $STANDBY is now active, $ACTIVE stopped."
+          '
