--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.2.0",
