--- a/.github/workflows/frontend cicd.yml
+++ b/.github/workflows/frontend cicd.yml
@@ -17,10 +17,9 @@ jobs:
         with:
           node-version: '22.12.0'
       - name: Install dependencies
-        run: npm install
+        run: cd frontend && npm install
       - name: Build project
-        run: npm run build
-        
+        run: cd frontend && npm run build
       - name: Configure AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -30,4 +29,4 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 sync dist/ s3://vintage-focus/ --exclude "image/*" --delete
+          aws s3 sync frontend/dist/ s3://vintage-focus/ --exclude "image/*" --delete
