--- a/.github/workflows/frontend cicd.yml
+++ b/.github/workflows/frontend cicd.yml
@@ -17,9 +17,13 @@ jobs:
         with:
           node-version: '22.12.0'
       - name: Install dependencies
-        run: cd frontend && npm install
+        working-directory: ./frontend
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install
       - name: Build project
-        run: cd frontend && npm run build
+        working-directory: ./frontend
+        run: npm run build
       - name: Configure AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
